k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listd-postgres-deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      integration: database
  template:
    metadata:
      labels:
        integration: database
    spec:
      containers:
        - name: listd-postgres
          image: postgres:11.1
          ports:
            - containerPort: 5432
