k8s/listd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: listd-service

spec:
  type: NodePort
  selector:
    app: listd
  ports:
    - port: 3000 # Service (virtual network) abstraction port
      targetPort: 3000 # Container port
      nodePort: 30030 # Port to expose on node
