k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: master-ingress

spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              serviceName: listd-service
              servicePort: 3000
